// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`every() should fail when at least one item is not a string 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "1",
    },
  ],
  "message": "All children should be valid",
  "path": "",
}
`;

exports[`every() should throw an error when a value is not an array 1`] = `
Object {
  "children": null,
  "message": "Value should be an array",
  "path": "",
}
`;
